package_final/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Capital__c</fullName>
        <label>Country Capital City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Owner_Change__c</fullName>
        <label>Last Owner Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Country Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region_global</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alpha2Code__c</fullName>
        <label>alpha2Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alpha3Code__c</fullName>
        <label>alpha3Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Prevent_Owner_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISCHANGED(OwnerId),

    /* Ensure that LeadSource, Country, or NumberOfEmployees are blank */
    OR(
        ISPICKVAL(LeadSource, &quot;&quot;),         /* LeadSource (picklist) must not be blank */
        ISBLANK(Country),                  /* Country must not be blank */
        ISBLANK(NumberOfEmployees)         /* NumberOfEmployees must not be blank */
    ),

    /* Exception Handling */
    NOT(
        OR(
            /* System Administrator must fill LeadSource but can skip Country and NumberOfEmployees */
            AND(
                $Profile.Name = &quot;System Administrator&quot;,
                NOT(ISPICKVAL(LeadSource, &quot;&quot;))      /* System Admin must have LeadSource populated */
            ),
            
            /* Contract Manager must fill LeadSource and Country but can skip NumberOfEmployees */
            AND(
                $Profile.Name = &quot;Contract Manager&quot;,
                NOT(ISPICKVAL(LeadSource, &quot;&quot;)),     /* Contract Manager must have LeadSource populated */
                NOT(ISBLANK(Country))               /* Contract Manager must have Country populated */
            )
        )
    )
)</errorConditionFormula>
        <errorMessage>You cannot change the Lead Owner unless Country, Lead Source, and No. of Employees are filled in.</errorMessage>
    </validationRules>
</CustomObject>